# Trenlly

./: makefile
api-gateway/: pyproject.toml
api-gateway/app/: main.py
api-gateway/app/api/: __init__.py  oauth.py  person.py  users.py
api-gateway/app/core/: config.py
api-gateway/app/core/schemas/: person.py  token.py
api-gateway/app/service/jwt/: __init__.py  service.py
auth-service/backend/: README.md  docker-compose.yaml  pyproject.toml
auth-service/backend/app/: main.py
auth-service/backend/app/alembic/: env.py
auth-service/backend/app/alembic/versions/: 2025_12_27_1525-03c87b39409a_first.py
auth-service/backend/app/api/: __init__.py  auth.py
auth-service/backend/app/api/dependencies/: __init__.py
auth-service/backend/app/api/dependencies/auth/: access_tokens.py  backend.py  strategy.py  user_manager.py  users.py
auth-service/backend/app/core/: __init__.py  config.py  fs_broker.py
auth-service/backend/app/core/authentication/: __init__.py  fastapi_users_app.py  transport.py  user_manager.py
auth-service/backend/app/core/generics/: __init__.py  jwt_strategy.py
auth-service/backend/app/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
auth-service/backend/app/core/models/mixins/: __init__.py  id_int_pk.py
auth-service/backend/app/service/kafka/: __init__.py  users.py
frontend/auth-service/: index.html  package-lock.json  package.json
frontend/auth-service/src/: App.js  App.jsx  index.css  index.js
frontend/auth-service/src/components/: Home.js  Home.jsx  Login.js  Login.jsx  ProtectedRoute.js  ProtectedRoute.jsx  Register.js  Register.jsx
frontend/auth-service/src/pages/: Home.js  (+2 more)
notify-service/: docker-compose.yaml  pyproject.toml
notify-service/app/: main.py
notify-service/app/core/: __init__.py  config.py  fs_broker.py
notify-service/app/mailing/: __init__.py  goal.py  login.py  send_message.py  trainings.py  welcome.py
notify-service/app/service/auth/: __init__.py  register.py  service.py
notify-service/app/service/trainings/: service.py
person-service/: docker-compose.yml  pyproject.toml
person-service/app/: main.py
person-service/app/alembic/versions/: 2026_01_04_1051-b48f9544e09d_first.py  2026_01_05_1438-5effaafb5b88_add_nullable_to_last_naem.py  2026_01_05_1553-80b351d16657_add_new_columns_to_goal.py  2026_01_05_1555-78a637dc86a6_add_deadline_day_on_goals.py  2026_01_05_1623-0f99bca33f55_add_some_new_types.py  2026_01_05_1625-13d45b60569d_change_createdat_column_type.py
person-service/app/analysis/: goals.py
person-service/app/api/: __init__.py  goal.py  motivation.py  person.py  training.py
person-service/app/core/: __init__.py  config.py  fs_broker.py
person-service/app/core/models/: __init__.py  base.py  db_helper.py  goal.py  person.py  training.py
person-service/app/core/schemas/: goal.py  person.py  training.py
person-service/app/repository/: goal.py  person.py  training.py
person-service/app/service/goal/: __init__.py  service.py
person-service/app/service/kafka/: __init__.py  user_exits.py
person-service/app/service/motivation/: __init__.py  service.py
person-service/app/service/person/: __init__.py  service.py
person-service/app/service/training/: __init__.py  service.py
(+3 files in other folders)
