[project]
name = "notify-service"
version = "0.1.0"
description = ""
authors = [
    {name = "HELAFUG",email = "loxand42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "faststream[cli] (>=0.6.5,<0.7.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "aiosmtplib (>=5.0.0,<6.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
