[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "HELAFUG",email = "loxand42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.127.1,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "fastapi[sqlalchemy] (>=0.127.1,<0.128.0)",
    "taskiq (>=0.12.1,<0.13.0)",
    "taskiq-fastapi (>=0.4.0,<0.5.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi-users[sqlalchemy] (>=15.0.3,<16.0.0)",
    "faststream[kafka] (>=0.6.5,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
